Adicionado validação de campos e alterado o arquivo README

--- a/src/main/resources/templates/pautaView.html
+++ b/src/main/resources/templates/pautaView.html
@@ -11,7 +11,7 @@
         </div>
         <form action="/votacao/votar" method="POST" name="votacaoForm" up-target=".container" enctype="multipart/form-data">
 	      	<input type="hidden" name="idpauta" value="{pauta.id}">
-	      	<input type="hidden" name="cpf" value="1">
+	      	<input type="hidden" name="cpf" value="91745424008"> <!-- CPF Teste -->
 	        <div class="form-group">Voto<br>
                	<input type="radio" name="voto" value="1">Sim 
 				<input type="radio" name="voto" value="0">Não
