--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group">
             <label class="sr-only" for="cpf">CPF</label>
-            <input type="text" name="cpf" class="form-control" id="cpf" placeholder="CPF" required autofocus {#if update}value="{user.cpf}"{/if}>
+            <input type="text" name="cpf" class="form-control" id="cpf" placeholder="CPF" value="91745424008" readonly="readonly"> <!-- CPF Teste -->
         </div>
         <div class="form-group">
             <label class="sr-only" for="username">Usuário</label>
