--- a/src/main/resources/templates/userView.html
+++ b/src/main/resources/templates/userView.html
@@ -23,11 +23,11 @@
         </div>
         <div class="form-group">
             <label class="sr-only" for="role">Funçăo</label>
-            {user.role}
+            {user.role.descricao}
         </div>
         <div class="form-group">
             <label class="sr-only" for="status">Status</label>
-            {user.status}
+            {user.status.descricao}
         </div>
       </div>
   </div>
