--- a/src/main/resources/templates/sessaoView.html
+++ b/src/main/resources/templates/sessaoView.html
@@ -2,7 +2,7 @@
 {#include base.html} 
 {#contents}
 <div class="modalenabled">
-  <h2>Sessão #{sessao.id}</h2>
+  <h2>SessÃ£o #{sessao.id}</h2>
   <div class="panel panel-default">
       <div class="form-panel">
         <h2>{sessao.nome}</h2>
