--- a/src/main/resources/templates/sessaoView.html
+++ b/src/main/resources/templates/sessaoView.html
@@ -16,7 +16,7 @@
             {sessao.dataFimSessao}
         </div>
         <div class="form-group">
-            {sessao.idPauta}
+            {sessao.idpauta}
         </div>
         <div class="form-group">
             {sessao.status.descricao}
