--- a/src/main/resources/templates/sessoes.html
+++ b/src/main/resources/templates/sessoes.html
@@ -45,7 +45,7 @@
       {sessao.dataFimSessao}
     </td>
     <td>
-      {sessao.idPauta}
+      {sessao.idpauta}
     </td>
     <td>
       {sessao.status.descricao}
