Adicionado o validador de CPF e validação de Status na API externa

--- a/src/main/resources/templates/pautaView.html
+++ b/src/main/resources/templates/pautaView.html
@@ -11,7 +11,7 @@
         </div>
         <form action="/votacao/votar" method="POST" name="votacaoForm" up-target=".container" enctype="multipart/form-data">
 	      	<input type="hidden" name="idpauta" value="{pauta.id}">
-	      	<input type="hidden" name="cpf" value="91745424008"> <!-- CPF Teste -->
+	      	<input type="hidden" name="cpf" value="{cpf}"> <!-- Primeiro CPF para testar a votação -->
 	        <div class="form-group">Voto<br>
 	        {#for vt in voto}
                	<input type="radio" name="voto" value="{vt}">{vt.descricao} 
