--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -20,8 +20,6 @@
       <th scope="col" >Nome</th>
       <th scope="col" class="fit">E-mail</th>
       <th scope="col" class="fit">CPF</th>
-      <th scope="col" class="fit">Funçăo</th>
-      <th scope="col" class="fit">Status</th>
       <th scope="col" class="fit">Data Criação</th>
       <th scope="col" class="fit text-center">Açőes</th>
     </tr>
@@ -29,7 +27,7 @@
 
   {#if users.size == 0}
   <tr>
-    <td colspan="8">Nenhum registro cadastrado.</td>
+    <td colspan="6">Nenhum registro cadastrado.</td>
   </tr>
   {#else}
 
@@ -46,16 +44,11 @@
       {user.cpf}
     </td>
     <td>
-      {user.role.descricao}
-    </td>
-    <td>
-      {user.status.descricao}
-    </td>
-    <td>
       {user.dtCreated}
     </td>
     <td class="fit">
       <form action="/users/{user.id}/delete" method="POST" name="delete-{user.id}" up-target=".container">
+      	<a class="btn btn-default btn-sm" href="/users/{user.id}" role="button" up-modal=".modalenabled">Visualizar</a>
         <a class="btn btn-primary btn-sm" href="/users/{user.id}/edit" role="button" up-modal=".modalenabled">Editar</a>
         <input class="btn btn-danger btn-sm" value="Excluir" type="submit">
       </form>
