Adicionado os Testes Unitários e realizado alguns ajustes na API

--- a/src/main/resources/templates/pautas.html
+++ b/src/main/resources/templates/pautas.html
@@ -51,9 +51,9 @@
       {pauta.dtCreated}
     </td>
     <td class="fit">
-      <form action="/pautas/{pauta.id}/delete" method="POST" name="delete-{pauta.id}" up-target=".container">
-        <a class="btn btn-default btn-sm" href="/pautas/{pauta.id}" role="button" up-modal=".modalenabled">Votar</a>
-        <a class="btn btn-primary btn-sm" href="/pautas/{pauta.id}/edit" role="button" up-modal=".modalenabled">Editar</a>
+      <form action="/pautas/delete/{pauta.id}" method="POST" name="delete-{pauta.id}" up-target=".container">
+        <a class="btn btn-default btn-sm" href="/pautas/view/{pauta.id}" role="button" up-modal=".modalenabled">Votar</a>
+        <a class="btn btn-primary btn-sm" href="/pautas/edit/{pauta.id}" role="button" up-modal=".modalenabled">Editar</a>
         <input class="btn btn-danger btn-sm" value="Excluir" type="submit">
       </form>
     </td>
