--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,9 +1,9 @@
 {#include base.html} 
-{#title}Erro{/title} 
+{#title}Sucesso{/title} 
 {#contents}
 <div class="modalenabled">
-  <div class="alert alert-danger" role="alert">
-    {error}
+  <div class="alert alert-success" role="alert">
+    {success}
   </div>
   <br>
   <a class="btn btn-default" href="#" onclick="history.go(-2);" role="button" up-target=".container">Voltar</a>
