--- a/src/main/resources/templates/sessaoForm.html
+++ b/src/main/resources/templates/sessaoForm.html
@@ -4,7 +4,7 @@
 <div class="modalenabled">
   <h2>{#if update}Editar Sessão #{sessao.id}{#else}Adicionar Sessão{/if}</h2>
   <div class="panel panel-default">
-    <form action="/sessoes/{#if update}{sessao.id}/edit{#else}new{/if}" method="POST" name="sessaoForm" up-target=".container" enctype="multipart/form-data">
+    <form action="/sessoes/{#if update}edit/{sessao.id}{#else}new{/if}" method="POST" name="sessaoForm" up-target=".container" enctype="multipart/form-data">
       <div class="form-panel">
         <div class="form-group">
             <label class="sr-only" for="nome">Nome</label>
