--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -4,7 +4,7 @@
 <div class="modalenabled">
   <h2>{#if update}Editar Usuário #{user.id}{#else}Adicionar Usuário{/if}</h2>
   <div class="panel panel-default">
-    <form action="/users/{#if update}{user.id}/edit{#else}new{/if}" method="POST" name="userForm" up-target=".container" enctype="multipart/form-data">
+    <form action="/users/{#if update}edit/{user.id}{#else}new{/if}" method="POST" name="userForm" up-target=".container" enctype="multipart/form-data">
       <div class="form-panel">
         <div class="form-group">
             <label class="sr-only" for="name">Nome</label>
