--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -47,9 +47,9 @@
       {user.dtCreated}
     </td>
     <td class="fit">
-      <form action="/users/{user.id}/delete" method="POST" name="delete-{user.id}" up-target=".container">
-      	<a class="btn btn-default btn-sm" href="/users/{user.id}" role="button" up-modal=".modalenabled">Visualizar</a>
-        <a class="btn btn-primary btn-sm" href="/users/{user.id}/edit" role="button" up-modal=".modalenabled">Editar</a>
+      <form action="/users/delete/{user.id}" method="POST" name="delete-{user.id}" up-target=".container">
+      	<a class="btn btn-default btn-sm" href="/users/view/{user.id}" role="button" up-modal=".modalenabled">Visualizar</a>
+        <a class="btn btn-primary btn-sm" href="/users/edit/{user.id}" role="button" up-modal=".modalenabled">Editar</a>
         <input class="btn btn-danger btn-sm" value="Excluir" type="submit">
       </form>
     </td>
