--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,9 @@
 {#include base.html}
 {#title}Home{/}
 {#contents}
-	<div class="text-center">
-    	<h2>Seja bem-vindo!</h2>
-    	<div>Sistema de Votação de Pautas</div>
-    </div>
+<div class="text-center">
+	<h2>Bem-vindo, <span class="username"></span>!</h2>
+	<div>Sistema de Votação de Pautas</div>
+</div>
 {/contents}
 {/include}
