--- a/src/main/resources/templates/sessaoForm.html
+++ b/src/main/resources/templates/sessaoForm.html
@@ -38,7 +38,7 @@
 	          {/for}
 	        </select>
         </div>
-        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
+        <button type="submit" class="btn btn-primary" onClick="location.href='/sessoes'">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
