--- a/src/main/resources/META-INF/resources/assets/css/style.css
+++ b/src/main/resources/META-INF/resources/assets/css/style.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 14px !important;
+    line-height: 1.42857143 !important;
+}
 body {
     color: #333333;
     font-size: 14px;
@@ -398,6 +402,15 @@ fieldset {
 
 .up-modal-dialog {
 	min-width: 400px !important;
+}
+
+.table td.fit, .table th.fit {
+    white-space: nowrap;
+    width: 1%;
+}
+
+.completed {
+    text-decoration: line-through;
 }
 
 @media only screen and (max-width: 500px) {
