--- a/src/main/resources/templates/pautaForm.html
+++ b/src/main/resources/templates/pautaForm.html
@@ -22,7 +22,7 @@
 	          {/for}
 	        </select>
         </div>
-        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
+        <button type="submit" class="btn btn-primary" onClick="location.href='/pautas'">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
