--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -11,14 +11,30 @@
             <input type="text" name="name" class="form-control" id="name" placeholder="Nome" required autofocus {#if update}value="{user.name}"{/if}>
         </div>
         <div class="form-group">
+            <label class="sr-only" for="cpf">CPF</label>
+            <input type="number" name="cpf" class="form-control" id="cpf" placeholder="CPF" required autofocus {#if update}value="{user.cpf}"{/if}>
+        </div>
+        <div class="form-group">
             <label class="sr-only" for="email">E-mail</label>
             <input type="text" name="email" class="form-control" id="email" placeholder="E-mail" required autofocus {#if update}value="{user.email}"{/if}>
         </div>
         <div class="form-group">
-            <label class="sr-only" for="cpf">CPF</label>
-            <input type="number" name="cpf" class="form-control" id="cpf" placeholder="CPF" required autofocus {#if update}value="{user.cpf}"{/if}>
+          <label class="sr-only" for="username">Usuário</label>
+          <input type="text" name="username" class="form-control" id="username" placeholder="Usuário" required autofocus {#if update}value="{user.username}"{/if}>
         </div>
-        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
+        <div class="form-group">
+            <label class="sr-only" for="password">Senha</label>
+            <input type="password" name="password" class="form-control" id="password" placeholder="Senha" required autofocus value="">
+        </div>
+        <div class="form-group">
+	        <select class="custom-select" name="role" id="role">
+	          <option disabled value="">Role</option>
+	          {#for rl in roles}
+	          <option value="{rl}" {#if user.role == rl}selected{/if}>{rl.descricao}</option>
+	          {/for}
+	        </select>
+        </div>
+        <button type="submit" class="btn btn-primary" onClick="location.href='/users'">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
