--- a/src/main/resources/templates/pautaView.html
+++ b/src/main/resources/templates/pautaView.html
@@ -11,23 +11,16 @@
         </div>
         <form action="/votacao/votar" method="POST" name="votacaoForm" up-target=".container" enctype="multipart/form-data">
 	      	<input type="hidden" name="idpauta" id="idpauta" value="{pauta.id}">
-	      	<input type="hidden" name="cpf" id="cpf" value="">
+	      	<input type="hidden" name="cpf" id="cpf" value="{cpf}">
 	        <div class="form-group">Voto<br>
-	        {#for vt in voto}
+	          {#for vt in voto}
                	<input type="radio" name="voto" value="{vt}">{vt.descricao} 
-			{/for}
-            </div>
+			      {/for}
+          </div>
 	        <button type="submit" class="btn btn-primary">Votar</button>
         </form>
       </div>
   </div>
 </div>
-
-<script type="text/javascript">
-$(document).ready(function() {
-	if(localStorage.getItem("cpf") != null) 
-		$("#cpf").prev('input').val(localStorage.getItem("cpf"));
-});
-</script>
 {/contents}
 {/include}
