Adicionado a tela do perfil, criado a função de sair e feito mais alguns ajustes no acesso das páginas

--- a/src/main/resources/META-INF/resources/assets/css/style.css
+++ b/src/main/resources/META-INF/resources/assets/css/style.css
@@ -30,7 +30,7 @@ h3, .h3 {
 }
 
 .bg-login {
-    background-color: #c1e8c7;
+    background-color: #e4e4e4;
     height: 1750px !important;
 }
 .bg-login .container-login {
