--- a/src/main/resources/templates/pautaView.html
+++ b/src/main/resources/templates/pautaView.html
@@ -19,6 +19,7 @@
           </div>
 	        <button type="submit" class="btn btn-primary">Votar</button>
         </form>
+        <div class="form-group">Obs: Aguarde a validação do CPF para realizar o voto.</div>
       </div>
   </div>
 </div>
