--- a/src/main/resources/templates/sessoesList.html
+++ b/src/main/resources/templates/sessoesList.html
@@ -47,8 +47,8 @@
     </td>
     <td class="fit">
       <form action="/sessoes/delete/{sessao.id}" method="POST" name="delete-{sessao.id}" up-target=".container">
-        <a class="btn btn-primary btn-sm" href="/sessoes/edit/{sessao.id}" role="button" up-modal=".modalenabled">Editar</a>
-        <button type="submit" onClick="location.href='/sessoes'" class="btn btn-danger btn-sm">Excluir</button>
+        {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm" href="/sessoes/edit/{sessao.id}" role="button" up-modal=".modalenabled">Editar</a>
+        <button type="submit" onClick="location.href='/sessoes'" class="btn btn-danger btn-sm">Excluir</button>{/if}
       </form>
     </td>
   </tr>
