--- a/src/main/resources/templates/pautaView.html
+++ b/src/main/resources/templates/pautaView.html
@@ -19,7 +19,8 @@
           </div>
 	        <button type="submit" class="btn btn-primary">Votar</button>
         </form>
-        <div class="form-group">Obs: Aguarde a validação do CPF para realizar o voto.</div>
+        <br><br>
+        <div class="form-group">Obs: Ao votar, aguarde a validação do CPF para confirmar o voto.</div>
       </div>
   </div>
 </div>
