--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
                         <input type="password" name="password" id="password" class="form-control input-login" placeholder="Senha"/>
                     </div>
                     <div class="form-group">
-                        <input type="submit" id="login" value="Login" class="btn btn-primary btn-lg btn-block"/>
+                        <input type="submit" id="login" value="Login" class="btn btn-login btn-lg btn-block"/>
                     </div>
                 </form>
                 <a href="/auth/cadastro">Cadastrar</a>
