--- a/src/main/resources/templates/sessoesList.html
+++ b/src/main/resources/templates/sessoesList.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <a class="btn btn-primary btn-sm" href="/sessoes/new" role="button" up-modal=".modalenabled">Adicionar</a>
+  {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm" href="/sessoes/new" role="button" up-modal=".modalenabled">Adicionar</a>{/if}
   <div class="search-right">
     <form action="/sessoes" method="GET" name="search" up-target=".container">
        <input type="text" name="filter" class="form-control" id="filter" placeholder="Localizar por Nome" {#if filtered}value="{filter}"{/if}>
